[package]
name = "lau-probability-theory"
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/SuperInstance/lau-probability-theory"
description = "Probability theory library — distributions, limit theorems, Bayesian inference, hypothesis testing, and MCMC"

[dependencies]
serde = { version = "1", features = ["derive"] }
nalgebra = "0.33"
rand = "0.8"
rand_distr = "0.4"

[dev-dependencies]
approx = "0.5"
